<resources>
    <string name="app_name">Green Nitrogen</string>
    <string name="tab1">Berita</string>
    <string name="tab2">Promo</string>
    <string name="tab3">Comment Of The Week</string>
    <string name="cd_main_image">main image</string>
    <string name="material_icon_like">&#xeb03;</string>
    <string name="material_icon_favorite">&#xe9b6;</string>
    <string name="material_icon_share">&#xeac0;</string>
    <string name="lorem_ipsum_long">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="drawer_home">Home</string>
    <string name="drawer_facebook">Facebook</string>
    <string name="drawer_gPlus">Google+</string>
    <string name="drawer_youtube">YouTube</string>
    <string name="drawer_rate">Rate</string>
    <string name="drawer_more">More</string>
    <string name="drawer_share">Share</string>
    <string name="drawer_exit">Exit</string>
    <string name="drawer_profile">Profile</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="drawer_visibility">@string/drawer_content_on</string>
    <string name="drawer_content_on">0</string>
    <string name="drawer_content_off">2</string>
    <string name="app_email">dr.m.karthiik@gmail.com</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="message">Do you want to exit?</string>
    <string name="positive_button">Yes</string>
    <string name="negative_button">No</string>
    <string name="bullet">\u2022 </string>
    <string name="font_awesome_email">&#xf003;</string>
    <string name="font_awesome_fax">&#xf1ac;</string>
    <string name="font_awesome_phone">&#xf095;</string>
    <string name="no1">1. </string>
    <string name="no2">2. </string>
    <string name="no3">3. </string>
    <string name="no4">4. </string>
    <string name="no5">5. </string>
    <string name="no6">6. </string>
    <string name="no7">7. </string>
    <string name="no8">8. </string>
    <string name="no9">9. </string>
    <string name="no10">10. </string>
    <string name="green_steam_wash">Green Steam Wash</string>
    <string name="testimoni_pelanggan">Testimoni Pelanggan</string>
    <string name="isu_nitrogen_palsu">Isu Nitrogen Palsu</string>
    <string name="green_nitrogen_palsu">Green Nitrogen Palsu</string>
    <string name="submit">Submit</string>
    <string name="merek_kendaraan">Merek Kendaraan</string>
    <string-array name="jenis_kendaraan">
        <item>SUV</item>
        <item>Sedan</item>
        <item>Minibus</item>
        <item>Motor</item>
        <item>Lainnya</item>
    </string-array>
    <string name="no_polisi">No Polisi</string>
    <string name="email">Email</string>
    <string name="no_hp">No HP</string>
    <string name="alamat">Alamat</string>
    <string name="nama">Nama</string>
    <string name="comment">Comment</string>
    <string name="pertanyaan_komen">Apa yang anda ketahui tentang Cuci Mobil Teknologi Uap Panas salah satu produk andalan Green Nitrogen ?</string>
    <string name="steam_wash">Steam Wash</string>
    <string name="judul_steam_wash">Comment Of The Week Green Steam Wash</string>
    <string name="judul_testimoni">Testimoni Pelanggan Green Nitrogen</string>
    <string name="pertanyaan_testimoni">Testimoni anda terhadap Pelayanan dan Produk dari Green Nitrogen</string>
    <string name="testimoni">Testimoni</string>
    <string name="comments_of_the_week_green_nitrogen">Comments Of The Week Green Nitrogen</string>
    <string name="pertanyaan_isu_palsu">Berikan komentar Anda tentang Isu HOAX Nitrogen Palsu?</string>
    <string name="paragraf_1_isu">Dapatkan Gratis e-book buku Angin Perubahan dari Adang Wijaya, Owner dan CEO Green Nitrogen dan Xtravoucher Senilai Rp. 200 Ribu . Pelopor dalam membangun raksasa bisnis dari menjual angin nitrogen dan tambal ban bergaransi di SPBU Pertamina seluruh Indonesia.</string>
    <string name="paragraf_2_isu">Untuk e-book dapat di download di Link yang akan kami kirim melalui Email/SMS, mohon lengkapi data pribadi Anda. Terima kasih.</string>
    <string name="pertanyaan_green_palsu">Merebaknya outlet Green Nitrogen palsu, apakah Anda tahu cara membedakannya? Menurut Anda apa yang menjafi ciri khas outlet Green Nitrogen?</string>
    <string name="green_palsu_paragraf1">Dapatkan Gratis e-book buku Angin Perubahan dari Adang Wijaya, Owner dan CEO Green Nitrogen dan Xtravoucher Senilai Rp. 200 Ribu . Pelopor dalam membangun raksasa bisnis dari menjual angin nitrogen dan tambal ban bergaransi di SPBU Pertamina seluruh Indonesia.</string>
    <string name="green_palsu_paragraf2">Untuk e-book dapat di download di Link yang akan kami kirim melalui Email/SMS, mohon lengkapi data pribadi Anda. Terima kasih.</string>
    <string name="award">Award</string>
    <string name="info">Info</string>
    <string name="informasi">Informasi</string>
    <string name="garansi">Garansi</string>
    <string name="kerja_sama_bisnis">Kerja Sama Bisnis </string>
    <string name="layanan">Layanan</string>
    <string name="produk_dan_layanan">Produk dan Layanan</string>
    <string name="car_wash">Car Wash</string>
    <string name="profil">Profil</string>
    <string name="hubungi_kami">Hubungi Kami</string>
    <string name="unit_kerja_bisnis">Unit Kerja Strategis</string>
    <string name="visi_misi">Visi Misi</string>
    <string name="tentang_kami">Tentang Kami</string>
    <string name="back_image_button_desc">Back To Main Activity Button</string>
    <string name="hub_form">Anda akan dibalas oleh pihak Green Nitrogen melalui Email</string>
    <string name="pesan">Pesan</string>
    <string name="paragraf_1">      Green Nitrogen merupakan salah satu unit usaha strategis yang menjadi merk andalan (Anchor Brand) dari PT Global Insight Utama yang berfokus kepada layanan prima untuk nitrogen dan tambal ban bergaransi di SPBU Pertamina. Unit usaha ini merupakan mitra bisnis resmi sebagai operator tunggal yang dipercaya oleh Pertamina memberikan layanan nitrogen dan tambal ban. Selain sebagai mitra strategis Pertamina, Green Nitrogen pernah dipercaya oleh Ferrari Indonesia untuk mendukung ajang Ferrari Rally Corso Pilota pada tanggal 14–15 Oktober 2011, dan sampai saat ini masih dipercaya sebagai Official Service Provider di Ferrari Indonesia, Lexus Indonesia, dan Nissan Motor Indonesia. Juga Auto 2000, principal ban Michelin, dan lainnya.</string>
    <string name="paragraf_2">      Beberapa mitra strategis Green Nitrogen yang telah bekerja sama diantaranya adalah Bank Mandiri, BCA, BNI, dan BRI untuk layanan transaksi pembayaran melalui mesin Debit dan Kartu Kredit (khusus untuk BNI); Sosro Indonesia untuk layanan promsi Teh Sosro di beberapa outlet; Adira Insurance dan Adira Finance, serta Politeknik Negeri Malang (Polinema) untuk pembuatan mesin N2 Generator yang penandatanganannya disaksikan oleh Gubernur Jawa Timur yaitu  Bp. DR. Soekarwo. Selain itu sedang dilakukan pembangunan wahana pemeliharaan kendaraan pertama dan terbesar di Indonesia, yaitu Polinema Autopark, yang akan diresmikan oleh Presiden RI.</string>
    <string name="paragraf_3">      Green Nitrogen mengedepankan layanan prima untuk kepuasan mitra bisnis (Pertamina) dan pelanggan (baik pelanggan SPBU dan pelanggan nitrogen).</string>
    <string name="tentang">Tentang</string>
    <string name="visi_1"> Visi, merupakan cita-cita masa depan yang akan dicapai perusahaan. </string>
    <string name="visi_2">Adapun visi yang akan dicapai adalah:</string>
    <string name="visi_3">Menjadi teladan dalam menjalankan bisnis yang beretika.</string>
    <string name="misi_1">Misi, adalah bisnis yang dijalankan untuk mencapai cita-cita yang akan dicapai.</string>
    <string name="misi_2">Adapun misi yang dijalankan adalah:</string>
    <string name="misi_3">1. Memberi pelayanan pengisian nitrogen yang prima di \n \t SPBU Pertamina</string>
    <string name="misi_4">2. Menerapkan sistem bagi hasil yang transparan dan \n \t akuntabel</string>
    <string name="misi_5">3. Membuka peluang kerja  kepada semua kalangan dan \n \t kesempatan berinvestasi kepada siapapun</string>
    <string name="tujuan_1">Tujuan, yaitu tujuan yang akan dicapai adalah </string>
    <string name="tujuan_2">Menjadi perusahaan yang terbesar, terbaik, dan terpercaya dalam memberikan layanan bisnis.</string>
    <string name="nilai_1">Nilai-nilai bisnis yang dianut dalam menjalankan bisnis adalah Jujur, Amanah, Cerdas, dan Transparansi </string>
    <string name="model_1">Model kerja sama bisnis: </string>
    <string name="model_2">1. Terbuka untuk semua kalangan </string>
    <string name="model_3">2. Sistem bagi hasil yang seimbang </string>
    <string name="model_4">3. Silaturahim dan Berjamaah </string>
    <string name="unit_kerja_strategis">Unit Kerja Strategis</string>
    <string name="unit_kerja_paragraf1">Unit kerja merupakan pembagian tugas atau pekerjaan yang dikelompokan berdasarkan organisasi. Semua unit kerja yang ada di dalam green nitrogen merupakan unit kerja strategis, artinya setiap unit kerja memiliki nilai yang tinggi di mata perusahaan, karena keberhasilan perusahaan sangat bergantung pada sinergi keseluruhan unit kerja.</string>
    <string name="unit_kerja_paragraf2">Unit kerja meliputi enam unit kerja yang terdiri atas:</string>
    <string name="support_unit">Supporting Strategic Unit</string>
    <string name="support_unit2">Merupakan unit kerja yang memberikan dukungan bagi kelancaran unit usaha yang meliputi</string>
    <string name="support_unit3">1. HR dan General Affair Department</string>
    <string name="asuransi">Asuransi</string>
    <string name="alert_isu_palsu1">Tuliskan komentar Anda tentang ISU HOAX NITROGEN PALSU, DAPATKAN VOUCHER ISI BARU NITROGEN selama setahun senilai Rp 400,000</string>
    <string name="alert_isu_palsu2">Harap Lengkapi Alamat Anda, Kota/Kabupaten, Kecamatan/Kelurahan, serta KODE POS karena Voucher akan dikirim ke Rumah anda melalui Jasa Pelayanan Paket</string>
    <string name="alert_dialog_testimoni1">Untuk info mengenai investasi, pihak kami akan menghubungi anda lebih lanjut melalui nomor telepon yang anda sertakan atau anda bisa langsung menghubungi kami di,</string>
    <string name="alert_dialog_hotline">Hotline: 0851 0079 2450</string>
    <string name="alert_dialog_testimoni2">Atau bisa daftar melalui menu Kerja Sama Bisnis</string>
    <string name="alert_dialog_green_palsu1">Tuliskan komentar Anda tentang MEREBAKNYA OUTLET GREEN NITROGEN PALSU, Dapatkan Gratis e-book buku Angin Perubahan dari Adang Wijaya, Owner dan CEO Green Nitrogen. Pelopor dalam membangun raksasa bisnis dari menjual angin nitrogen dan tambal ban bergaransi di SPBU Pertamina seluruh Indonesia.</string>
    <string name="alert_dialog_green_palsu2">Lengkapi alamat Anda karena Voucher akan terkirim ke alamat Anda. E-book dapat Anda download melalui email atau sms di nomor HP Anda.</string>
    <string name="alert_dialog_steam_wash1">Tuliskan komentar Anda tentang Green Steam Wash Cuci Mobil Teknologi Uap Panas, Dapatkan Voucher Gratis Cuci Mobil dengan cara memberikan komentar pada form yang telah disediakan</string>
    <string name="alert_dialog_steam_wash2">*Voucher Gratis akan kami berikan kepada Komentar terbaik setiap harinya</string>
    <string name="alert_dialog_steam_wash3">Harap Lengkapi Email, No Telepon Anda karena jika komentar anda dirasa baik maka Tim Hotline akan menghubungi anda untuk memberikan Voucher Gratis</string>
    <string name="peta_outlet_green_nitrogen">Peta Outlet Green Nitrogen</string>
</resources>