<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_home"
            android:icon="@drawable/ic_home"
            android:title="@string/drawer_home" />

        <item
            android:id="@+id/drawer_peta"
            android:icon="@drawable/map_marker"
            android:title="@string/peta_outlet_green_nitrogen" />

        <item android:title="@string/info">
            <menu>
                <item
                    android:id="@+id/drawer_award"
                    android:icon="@drawable/medal_icon"
                    android:title="@string/award" />

                <item
                    android:id="@+id/drawer_garansi"
                    android:icon="@drawable/garansi_icon"
                    android:title="@string/garansi" />

                <item
                    android:id="@+id/drawer_asuransi"
                    android:icon="@drawable/ic_verified_user_white_36dp"
                    android:title="@string/asuransi" />

                <item
                    android:id="@+id/drawer_kerja_sama_bisnis"
                    android:icon="@drawable/ic_work_white_36dp"
                    android:title="@string/kerja_sama_bisnis" />
            </menu>
        </item>

        <item android:title="@string/layanan">
            <menu>
                <item
                    android:id="@+id/drawer_produk"
                    android:icon="@drawable/layanan_icon"
                    android:title="@string/produk_dan_layanan" />

                <item
                    android:id="@+id/drawer_car_wash"
                    android:icon="@drawable/ic_local_car_wash_white_36dp"
                    android:title="@string/car_wash" />
            </menu>
        </item>

        <item android:title="@string/profil">
            <menu>
                <item
                    android:id="@+id/drawer_tentang"
                    android:icon="@drawable/about_us"
                    android:title="@string/tentang_kami" />

                <item
                    android:id="@+id/drawer_visi_misi"
                    android:icon="@drawable/goal_icon"
                    android:title="@string/visi_misi" />

                <item
                    android:id="@+id/drawer_unit_kerja_strategis"
                    android:icon="@drawable/flow_chart_icon"
                    android:title="@string/unit_kerja_bisnis" />
            </menu>
        </item>

    </group>

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/drawer_hub"
            android:icon="@drawable/ic_email_white_36dp"
            android:title="@string/hubungi_kami" />

    </group>

</menu>