<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bullet"
            android:textColor="#000000"
            android:layout_marginRight="5dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#000000"
            android:text="@string/alert_dialog_steam_wash1" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView8"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:textStyle="bold"
        android:text="@string/alert_dialog_steam_wash2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bullet"
            android:textColor="#000000"
            android:layout_marginRight="5dp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/alert_dialog_steam_wash3"
            android:textColor="#000000"/>
    </LinearLayout>
</LinearLayout>