<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="140dp"
    android:background="#d00000"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginBottom="6dp"
            android:src="@drawable/nav_icon"
            android:visibility="@string/drawer_visibility" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="#ffffff"
            android:textSize="14sp"
            android:visibility="@string/drawer_visibility" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="6dp"
            android:text="@string/app_email"
            android:textColor="#ffffff"
            android:textSize="12sp"
            android:visibility="@string/drawer_visibility" />

    </LinearLayout>

</LinearLayout>