<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.gasan.myapplication.activities.TestimoniActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:gravity="center"
        android:background="#D00000"
        android:id="@+id/header1"
        android:orientation="horizontal">


        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:background="#D00000"
            app:srcCompat="@drawable/ic_arrow_back_white_36dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Section Testimoni"
            android:layout_gravity="center"
            android:textColor="@android:color/white"
            android:layout_marginLeft="30dp"
            android:textSize="20sp"
            />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/header1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteY="8dp"
            tools:layout_editor_absoluteX="8dp">

            <LinearLayout
                android:id="@+id/lineatas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="10dp">

                <TextView
                    android:id="@+id/judulTestimoni"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/judul_testimoni"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="#000000"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="4dp"
                    android:background="@android:color/holo_red_dark" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/isiTestimoni"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_below="@+id/lineatas">


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:hint="@string/nama">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/inputnamaTestimoni"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"/>
                </android.support.design.widget.TextInputLayout>
                <!--<EditText-->
                    <!--android:id="@+id/inputnamaTestimoni"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:ems="10"-->
                    <!--android:inputType="textPersonName"-->
                    <!--android:hint="@string/nama" />-->

                <!--<EditText-->
                    <!--android:id="@+id/inputnohpTestimoni"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:ems="10"-->
                    <!--android:inputType="phone"-->
                    <!--android:hint="@string/no_hp" />-->

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:hint="@string/no_hp">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/inputnohpTestimoni"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="phone"/>
                </android.support.design.widget.TextInputLayout>

                <!--<EditText-->
                    <!--android:id="@+id/inputemailTestimoni"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_marginLeft="10dp"-->
                    <!--android:layout_marginRight="10dp"-->
                    <!--android:layout_marginTop="10dp"-->
                    <!--android:ems="10"-->
                    <!--android:inputType="textEmailAddress"-->
                    <!--android:hint="@string/email" />-->

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:hint="@string/email">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/inputemailTestimoni"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"/>
                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/pertanyaan_testimoni"
                    android:textColor="#000000" />

                <!--<EditText-->
                    <!--android:id="@+id/kolomTestimoni"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_marginLeft="10dp"-->
                    <!--android:layout_marginRight="10dp"-->
                    <!--android:scrollbars="vertical"-->
                    <!--android:fadeScrollbars="false"-->
                    <!--android:layout_weight="1"-->
                    <!--android:inputType="textMultiLine"-->
                    <!--android:hint="@string/testimoni" />-->

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:hint="@string/testimoni">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/kolomTestimoni"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textMultiLine"/>
                </android.support.design.widget.TextInputLayout>

                <Button
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:id="@+id/buttonSubmitTestimoni"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/submit" />

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>


</RelativeLayout>
